# SQL_UNI

./: README.md  practical_3.md  practical_4.sql  practical_5.sql  practical_6.sql  practical_7.sql  practical_8.sql
practical_9/: .env.example  README.md  connect_publishing.py  connect_publishing4.py  connect_publishing5.py  connect_publishing6.py  connect_publishing7.py  connect_publishing8.py  db.py  genre_year_heatmap.csv  main.py  pyproject.toml  task_2_sales_data.csv  task_5_kpi.csv  task_7_book_pareto.csv
practical_9/publishing_app/: app.py  book_pareto.csv  genre_revenue.csv  revenue_by_month.csv
